[package]
name = "emstr"
description = "Helpers for working with string types for embedded devices"
repository = "https://github.com/ryankurte/emstr"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[features]
std = [ "thiserror" ]
default = [ "std" ]

[dependencies]
num-traits = { version = "0.2.15", default_features = false }
thiserror = { version = "1.0.38", optional = true, default_features = false }

[dev-dependencies]
rand = { version = "0.8.5" }
